--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,17 +10,41 @@ body {
         font-size:25px;
         letter-spacing:.5px;
         margin-bottom:5px;
+        margin-top:0;
     }
-    .document-list {
-        list-style:none;
-        padding:0;
+    .column-container {
         display:flex;
-        justify-content: space-evenly;
-        .list-item:nth-of-type(2) {
-            padding:0 10px;
+        justify-content:space-evenly;
+        .column {
+            background-color:white;
+            border: 1px solid rgba(0,0,0,0.3);
+            border-radius:2px;
+            padding:10px;
+            width:325px;
+            min-height:800px;
+            display:flex;
+            flex-direction:column;
+            .column-item {
+                background-color:white;
+                border: 1px solid rgba(0,0,0,0.3);
+                border-radius:2px;
+                padding:5px;
+                margin-bottom:10px;
+                cursor: pointer !important;
+                font-family: Arial, Helvetica, sans-serif;
+                letter-spacing:.7px;
+                box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+                .title {
+                    font-family:Arial, Helvetica, sans-serif;
+                }
+                img {
+                    width:100%;
+                    height:auto;
+                }
+            }
+            .list-item:not(:first-child) {
+                margin-top:5px;
+            }
         }
-    }
-    img {
-        width:100%;
     }
 }
